chore: import credentials endpoint & Traction adapter updates
