# packages/bc-wallet-openapi/openapi/openapi.yaml
@@ -1012,6 +1012,33 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /credentials/schemas/import:
+    post:
+      tags:
+        - Credential Definitions
+      summary: Import a credential schema
+      operationId: importCredentialSchema
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CredentialSchemaRequest'
+        required: true
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CredentialSchemaResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   /credentials/schemas/{credentialSchema}:
     parameters:
       - name: credentialSchema
